Fix issue with Wmic processor locating